last version to submit

--- a/Sber/sberlib.ipynb
+++ b/Sber/sberlib.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f5c6384",
+   "metadata": {},
+   "source": [
+    "**В данном файле содержится библиотека классов и функций для построения прогнозов на основе временного ряда остатков денежных средств клиентов банка.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2b31c537",
@@ -17,6 +25,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d403394",
+   "metadata": {},
+   "source": [
+    "В первой части представлены классы ARIMA и OptimizedARIMA:\n",
+    "\n",
+    "Экземпляры класса ARIMA(start_date, month_number, data) строят прогнозы в зависимости от стартовой даты, количества месяцев прогноза, исходных данных.\n",
+    "Прогноз строится методом arima. Методы error_1 и error_2 позволяют рассчитать и вывести ошибки прогноза для созданного экземпляра. Для методов необходимо дополнительно указать альфу и бету - это коэффициенты корректирующие угол наклна тренда и ширину стандартного отклонения от тренда."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "67c70bc3",
@@ -29,23 +48,26 @@
     "        self.alphas = np.linspace(0, 3, 50, dtype=float)\n",
     "        self.betas = np.linspace(0, 3, 50, dtype=float)\n",
     "        \n",
-    "        self.start_date = start_date\n",
-    "        self.month_number = month_number\n",
-    "        self.data = data\n",
+    "        self.start_date = start_date #стартовая дата прогноза\n",
+    "        self.month_number = month_number #количество месяцев прогноза\n",
+    "        self.data = data #исходные фактические данные\n",
     "        \n",
-    "        self.start_index = self.data[self.data.date == self.start_date].index[0]\n",
+    "        self.start_index = self.data[self.data.date == self.start_date].index[0] #номер стартовой даты\n",
     "        \n",
-    "        self.mean = self.data.res.mean()\n",
-    "        self.std = self.data.res.std()\n",
+    "        self.mean = self.data.loc[:self.start_index].res.mean() #среднее первой разницы временного ряда до старта\n",
+    "        self.std = self.data.loc[:self.start_index].res.std() #стандартное отклонение первой разницы ряда до старта\n",
     "        \n",
-    "        self.x = np.zeros(self.month_number)\n",
-    "        self.eps = np.zeros(self.month_number)\n",
+    "        self.x = np.zeros(self.month_number) #создаем пока нулевой ряд трендовой части прогноза\n",
+    "        self.eps = np.zeros(self.month_number) #также создаем нулевой ряд случайной части прогноза\n",
     "                 \n",
+    "        #создадим временные отрезки: (1) горизонт прогнозирования (2) факт остатков на горизонте прогноза (3) предшествующий стартовой дате\n",
     "        self.time_interval = self.data.loc[self.start_index:self.start_index+ self.month_number-1].date.values\n",
-    "        self.fact_future = self.data.loc[self.start_index:self.start_index+ self.month_number-1].value_filt.values\n",
-    "        self.fact_past = self.data.loc[self.start_index- self.month_number+1:self.start_index].value.values\n",
+    "        self.fact_future = self.data.loc[self.start_index:self.start_index+ self.month_number-1].value.values\n",
+    "        self.fact_past = self.data.loc[self.start_index - self.month_number+1:self.start_index].value.values\n",
     "        \n",
-    "        \n",
+    "    #функция прогноза ряда, генерирует на прогнозном горизонте случайные значения со средним и стандартным отклонением\n",
+    "    #равными среднему и стандартному отклонению предшествующего факта значений, умноженные на корректирующие коэффициенты \n",
+    "    #альфа и бета, по которым далее оптимизируется прогноз\n",
     "    def arima(self,alpha,beta,month_number):\n",
     "        np.random.seed(self.randomseed)\n",
     "        self.eps = np.random.normal(alpha*self.mean, beta*self.std, size=self.month_number)\n",
@@ -54,6 +76,9 @@
     "            self.x[i] = self.eps[i] + self.x[i-1]\n",
     "        return self.x\n",
     "    \n",
+    "    #функция подсчета ошибки прогноза (отклонения в среднем на горизонте планирования, аналог MAE)\n",
+    "    #опция month_number используется при расчете ошибки на прогнозном горизонте\n",
+    "    #опция month_number = month_number используется в оптимизационном цикле\n",
     "    def error_1(self, alpha,beta, month_number):\n",
     "        np.random.seed(self.randomseed)\n",
     "        if month_number == 0:\n",
@@ -62,6 +87,9 @@
     "            err_1 = np.sum(abs(self.fact_past - self.arima(alpha, beta,month_number)))/self.month_number\n",
     "        return err_1\n",
     "    \n",
+    "    #функция подсчета ошибки прогноза (максимальное пробитие факта в млн. руб.)\n",
+    "    #опция month_number используется при расчете ошибки на прогнозном горизонте\n",
+    "    #опция month_number = month_number используется в оптимизационном цикле\n",
     "    def error_2(self,alpha,beta, month_number):\n",
     "        np.random.seed(self.randomseed)\n",
     "        if month_number == 0:\n",
@@ -69,6 +97,20 @@
     "        else:\n",
     "            err_2 = abs(np.min(self.fact_past - self.arima(alpha, beta, month_number)))\n",
     "        return err_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbfbc74e",
+   "metadata": {},
+   "source": [
+    " Класс ARIMA(start_date, month_number, data) предоставляет возможность получить оптимизированный по альфа и бета прогноз. Ему передаются те же параметры, что и ARIMA.\n",
+    " \n",
+    " Метод forecast_plot выводит график прогноза и факта, а также ошибки прогноза и оптимальные альфа и бета.\n",
+    " \n",
+    " Метод forecast_errors выводит только ошибки прогноза\n",
+    " \n",
+    " Метод optimized выводит оптимальные альфа (кооректировка к средней скорости роста остатков) и бета (корректировка к стандартному отклонению от тренда)"
    ]
   },
   {
@@ -80,6 +122,7 @@
    "source": [
     "class OptimizedARIMA(ARIMA):\n",
     "    \n",
+    "    #подбор альфа и бета таких, что ошибки в сумме дают минимальное значение\n",
     "    def optimize(self):\n",
     "        coeff = []\n",
     "        errors = []\n",
@@ -94,6 +137,7 @@
     "        beta_opt = optimum[1]\n",
     "        return np.round(alpha_opt,2), np.round(beta_opt,2)\n",
     "    \n",
+    "    #вывод результатов прогнозирования с оптимальными альфа и бета\n",
     "    def forecast_plot(self):\n",
     "        try:\n",
     "            f, ax = plt.subplots(figsize=(18, 8))\n",
@@ -110,6 +154,7 @@
     "        except:\n",
     "            print('ошибка ввода даты или количества прогнозных месяцев')\n",
     "    \n",
+    "    #вывод только ошибок\n",
     "    def forecast_errors(self):\n",
     "        print('Среднемесячное отклонение от фактических остатков:',\n",
     "                  np.round(self.error_1(self.optimize()[0], self.optimize()[1],0)*100*self.month_number/np.sum(self.fact_future),1),'%')\n",
@@ -117,8 +162,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8534f654",
+   "metadata": {},
+   "source": [
+    "В этой части библиотеки представлены несколько функций строящих прогноз на основе сэмплов временного ряда и с использованием алгоритмов машинного обучения:\n",
+    "\n",
+    "> - ML_forecast(start_date, forecast_date, data, model) разбивает ряд на две части: историю и будущее. Тренирует модель на истории. Применяет модель к будущему.\n",
+    "> - ML_forecast_samples(start_date, forecast_date, sample_size, data, model) разбивает историческую часть ряда на сэмплы (дни или месяцы), сдвинутые друг относительно друга на один шаг времени. В качестве целевой переменной ставит в соответствие сэмплу значение ряда, сдвинутое относительно сэмплат на прогнозируемое количество дней или месяцев. Модель обучается на матрице сэмплов и целевой переменной. Далее модель применяется к сэмплу, примыкающему непосредственно к стартовой дате прогноза. Получаем прогноз в размере сэмпла сразу после стартовой даты.\n",
+    "> - ML_forecast_optimized_samples дополнительно подбирается такой размер сэмпла у котрого ошибка прогноза минимальна.\n",
+    "> - ML_forecast_features(start_date, forecast_date, sample_size, data, model) для прогнозирования применяется такое же сэмплирование, только сэмплы заменяются на их характеристики -среднее, минимум, стандартное отклонение и др. Эти характеристики выступают в качестве признаков.\n",
+    "> - ML_forecast_optimized_features(start_date, forecast_date, data, model, max_sample_size=365, min_sample_size = 2) дополнительная оптимизация по размеру сэмпла."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0ac6e938",
    "metadata": {},
    "outputs": [],
@@ -146,8 +205,6 @@
     "    Model.fit(X_train,np.ravel(Y_train)) \n",
     "    y_pred = Model.predict(X_test)\n",
     "    \n",
-    "    R_2 = metrics.r2_score(Y_test, y_pred)\n",
-    "    MAE = metrics.mean_absolute_error(Y_test, y_pred)\n",
     "    error_1 = np.sum(abs(Y_test.T - y_pred.T))*100/len(Y_test)/np.mean(Y_test)\n",
     "    error_2 = abs(np.min(np.where((Y_test.T - y_pred.T)>0, 0, Y_test.T - y_pred.T)))\n",
     "    print('Среднемесячное отклонение от фактических остатков:', np.round(error_1,2),'%')\n",
@@ -245,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "4fbf9bc7",
    "metadata": {},
    "outputs": [],
