one more correction

--- a/Sber/Sber_time_series_analysis.ipynb
+++ b/Sber/Sber_time_series_analysis.ipynb
@@ -961,7 +961,7 @@
    "outputs": [],
    "source": [
     "#сжатый ряд\n",
-    "sb_resampled.to_csv('C:/Users/Алексей Третьяков/Desktop/ML_projects/FierceDra-X.github.io/Sber/data_resampled.csv',\n",
+    "sb_resampled.to_csv('~/Sber/data_resampled.csv',\n",
     "            sep=';',\n",
     "            index=False)"
    ]
@@ -974,7 +974,7 @@
    "outputs": [],
    "source": [
     "#исходный ряд, дополненный колонками res и value_filt\n",
-    "sb.to_csv('C:/Users/Алексей Третьяков/Desktop/ML_projects/FierceDra-X.github.io/Sber/data_notsampled.csv',\n",
+    "sb.to_csv('~/Sber/data_notsampled.csv',\n",
     "            sep=';',\n",
     "            index=False)"
    ]
